--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <main class="wrapper">
-      <section class="box"></section>
-      <section class="box"></section>
-      <section class="box"></section>
-      <section class="box"></section>
+    <main class="main-container">
+      <section class="box-wrapper">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+      <section class="controls-wrapper">
+        <input id="speed" value="2" type="range" min="0.5" max="4.5" step="0.1" />
+        <input id="rotation" value="360" type="range" min="0" max="1800" step="1" />
+        <input id="origin-x" value="1" type="range" min="0" max="100" step="1" />
+        <input id="origin-y" value="1" type="range" min="0" max="100" step="1" />
+      </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
