Trying to add a reset button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <label for="origin-y">Origin Y</label>
         <input id="origin-y" class="slider" value="50" type="range" min="0" max="100" step="1" />
         <button id="play">Pause</button>
+        <button id="reset">Reset</button>
       </section>
 
     </main>
