--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>css-animating-rotating-blocks</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="controls.css" rel="stylesheet" type="text/css" />
+    <link href="style/style.css" rel="stylesheet" type="text/css" />
+    <link href="style/controls.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <main class="main-container">
@@ -21,13 +21,13 @@
 
       <section class="controls-wrapper">
         <label for="speed">Speed</label>
-        <input id="speed" class="slider" value="5" type="range" min="0.5" max="9.5" step="0.1" />
+        <input id="speed" data-unit="s" class="slider" value="5" type="range" min="0.5" max="9.5" step="0.1" />
         <label for="rotation">Rotation</label>
-        <input id="rotation" class="slider" value="900" type="range" min="0" max="1800" step="1" />
+        <input id="rotation" data-unit="deg" class="slider" value="900" type="range" min="0" max="1800" step="1" />
         <label for="origin-x">Origin X</label>
-        <input id="origin-x" class="slider" value="50" type="range" min="0" max="100" step="1" />
+        <input id="origin-x" data-unit="%" class="slider" value="50" type="range" min="0" max="100" step="1" />
         <label for="origin-y">Origin Y</label>
-        <input id="origin-y" class="slider" value="50" type="range" min="0" max="100" step="1" />
+        <input id="origin-y" data-unit="%" class="slider" value="50" type="range" min="0" max="100" step="1" />
         <div class="button-wrapper">
           <button id="play">Pause</button>
           <button id="reset">Reset</button>
