--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>css-animating-rotating-blocks</title>
+    <title>CSS flower animation</title>
     <link href="style/style.css" rel="stylesheet" type="text/css" />
     <link href="style/controls.css" rel="stylesheet" type="text/css" />
   </head>
@@ -35,6 +35,8 @@
       </section>
 
     </main>
+    
     <script src="script.js"></script>
+
   </body>
 </html>
