--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>CSS flower animation</title>
+    <title>Animating flower petals</title>
     <link href="style/style.css" rel="stylesheet" type="text/css" />
     <link href="style/controls.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌷</text></svg>">
   </head>
   <body>
     <main class="main-container">
 
-      <h2>CSS flower animation</h2>
+      <h2>Animating flower petals 🌷</h2>
 
       <section class="shapes-wrapper">
         <div class="shape"></div>
